# dyntest-suite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tupfile  Tuprules.lua  Tuprules.tup  build.sh  cfg.sh  env.sh  tartrans.sh  tup.Kconfig  tup.config  tup.config.example
annotated/: Tuprules.lua
annotated/cfgtests/: Tupfile.lua
annotated/dyninst/: Tupfile.lua
annotated/elfutils/: Tupfile.lua
annotated/hpctoolkit/: Tupfile.lua
annotated/micro/: Tupfile.lua
cmake/: FindLibBFD.cmake  FindLibIberty.cmake
inputs/: Tupfile.lua  Tuprules.lua  inputs.lua
inputs/2/: .gitignore
inputs/src/: fib.c  hello.c  parvecsum.c  sort1.cpp  sort2.cpp  vecsum.c
latest/cfgtests/: Tupfile.lua
latest/dyninst/: Tupfile  Tupfile.lua  use.tup
latest/dyninst-vg/: Tupfile.lua  dummy
latest/dyninst/dummy/include/: CFG.h  Symtab.h
latest/elfutils/: Tupfile  Tupfile.lua  use.tup
latest/hpctoolkit/: Tupfile  Tupfile.lua  use.tup
latest/hpctoolkit-vg/: Tupfile.lua
latest/micro/: Tupfile.lua
latest/testsuite/: Tupfile.lua
reference/cfgtests/: Tupfile.lua
reference/dyninst/: Tupfile  Tupfile.lua  dummy  use.tup
reference/elfutils/: Tupfile  Tupfile.lua  dummy  use.tup
reference/hpctoolkit/: Tupfile  Tupfile.lua  use.tup
reference/micro/: Tupfile.lua
refsrc/: CMakeLists.txt  exdump.cpp
serial/dyninst/: Tupfile.lua
serial/hpctoolkit/: Tupfile.lua
src/: CMakeLists.txt  cfgtests.lua  dyninst.lua  dyninst.sh  dyninst.tup  elfutils.lua  elfutils.sh  elfutils.tup  hpctoolkit.lua  hpctoolkit.tup  micro.lua  testsuite.lua
src/cfgtests/: cfgdump.cpp  gcc.sh  install.sh  jtdump.lua
src/examples/: CMakeLists.txt  ex-main.c  ex-print.c
src/micro/: micro-parse.cpp  micro-symtab.cpp
tests/: CMakeLists.txt  Tupfile  Tupfile.lua  Tuprules.lua  common.lua  profclean.lua  tarcat.sh  tartrans.sh
tests/crash/: Tupfile.lua  rep.sh
tests/perf/: Tupfile.lua  hpccat.lua  hpcdump-xm.lua  hpcdump.lua  hpcdump.sh  hpcprof.sh  hpcrun.sh
tests/perf/struct/: Tupfile
tests/src/: Tupfile  micro-symtab.cpp
tests/stable/: Tupfile.lua  clean.sh  diffout.sh  failure.txt
tests/struct/: Tupfile  Tupfile.lua
tests/val/: Tupfile.lua  system.supp  tmplog.sh
